correccion en importacion de imagenes

--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/styles.css">
     <title>About Me</title>
 </head>
 
@@ -22,7 +22,7 @@
         <div class="about-container">
             <h2 class="about-tittle">Sobre mi</h2>
             <div class="info-container">
-                <img class="about-img" src="assets/fachero.jpg" alt="Benjamin Dalmau">
+                <img class="about-img" src="assets/img/Benjamin-Dalmau.jpg" alt="Benjamin Dalmau">
                 <p class="about-content">Me llamo Benjamin, soy de Godoy Cruz, tengo 21 años, estudio programación, hago
                     teatro y voy al gimnasio.   
                     Me gusta hacer cursos y tallers para expandir mis conocimientos y conocer gente.
